Create NotificationsController for getting a paginated notification list
